Fix #8: made h1 on post on mobile smaller

--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -44,6 +44,10 @@
 
         h1 {
             font-size: 3em;
+
+            @media screen and (max-width: 800px) {
+                font-size: 1.9em;
+            }
         }
     }
 
